--- a/src/SolTechnology.Time/SolTechnology.Time.csproj
+++ b/src/SolTechnology.Time/SolTechnology.Time.csproj
@@ -1,9 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<Authors>Adrian Strugala</Authors>
+		<Version>1.0.0</Version>
+		<Description>SolTechnology DateTimeZone library</Description>
+		<PackageTags>sol technology core date time zone dateTime timezone conversion</PackageTags>
+		<Product>SolTechnology.DateTimeZone</Product>
+		<PackageId>SolTechnology.DateTimeZone</PackageId>
+		<AssemblyName>SolTechnology.DateTimeZone</AssemblyName>
+		<RepositoryUrl>https://github.com/AdrianStrugala/SolTechnology.DateTimeZone</RepositoryUrl>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+
+		<PackageIcon>docs\mini-logo.png</PackageIcon>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Include="..\..\docs\mini-logo.png" Pack="true" Visible="false" PackagePath="docs\mini-logo.png" />
+	</ItemGroup>
+
 
 </Project>
